# PowerStation

./: .gitignore  .releaserc.yaml  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: release.yaml
bindings/dbus-xml/: org-shadowblip-cpu-core.xml  org-shadowblip-cpu.xml  org-shadowblip-gpu-card-connector.xml  org-shadowblip-gpu-card.xml  org-shadowblip-gpu.xml
docs/: cpu-core.md  cpu.md  gpu-card-connector.md  gpu-card.md  gpu.md
rootfs/usr/lib/systemd/system/: lightningbus.service
rootfs/usr/share/dbus-1/system.d/: org.shadowblip.LightningBus.conf  org.shadowblip.LightningBus.xml  org.shadowblip.PowerStation.conf
rootfs/usr/share/powerstation/platform/: amd_apu_database.toml  dmi_overrides_apu_database.toml  intel_apu_database.toml
src/: constants.rs  main.rs
src/performance/: cpu.rs  gpu.rs  mod.rs
src/performance/apu/: dbus.rs  mod.rs  tdp.rs
src/performance/cpu/: core.rs  cpu.rs  cpu_features.rs  mod.rs
src/performance/gpu/: amd.rs  connector.rs  dbus.rs  interface.rs  mod.rs  tdp.rs
src/performance/gpu/acpi/: firmware.rs  mod.rs
src/performance/gpu/amd/: amdgpu.rs  asus.rs  hwmon.rs  mod.rs  ryzenadj.rs  tdp.rs
src/performance/gpu/asus/: asus_wmi.rs  mod.rs
src/performance/gpu/dbus/: devices.rs  gpu.rs  mod.rs  tdp.rs
src/performance/gpu/intel/: intelgpu.rs  mod.rs  tdp.rs
src/performance/gpu/platform/: hardware.rs  mod.rs  model_config.rs
src/platform/: asus.rs  mod.rs
