[package]
name = "powerstation"
version = "0.1.6"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Daemon for controlling TDP and performance over DBus"

[package.metadata.generate-rpm]
assets = [
  { source = "./target/release/powerstation", dest = "/usr/bin/powerstation", mode = "755" },
  { source = "./rootfs/usr/share/dbus-1/system.d/org.shadowblip.PowerStation.conf", dest = "/usr/share/dbus-1/system.d/org.shadowblip.PowerStation.conf", mode = "644" },
  { source = "./rootfs/usr/lib/systemd/system/powerstation.service", dest = "/usr/lib/systemd/system/powerstation.service", mode = "644" },
]

[package.metadata.generate-rpm.requires]
dbus = "*"
pciutils = "*"

[dependencies]
libryzenadj = { git = "https://gitlab.com/shadowapex/libryzenadj-rs.git" }
#libryzenadj = "0.13.0"
log = "0.4.20"
simple_logger = "4.2.0"
tokio = { version = "*", features = ["full"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
zbus_macros = "3.14.1"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
