[package]
name = "powerstation"
version = "0.7.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Daemon for controlling TDP and performance over DBus"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/powerstation", dest = "/usr/bin/powerstation", mode = "755" },
  { source = "rootfs/usr/share/dbus-1/system.d/org.shadowblip.PowerStation.conf", dest = "/usr/share/dbus-1/system.d/org.shadowblip.PowerStation.conf", mode = "644" },
  { source = "rootfs/usr/lib/systemd/system/powerstation.service", dest = "/usr/lib/systemd/system/powerstation.service", mode = "644" },
  { source = "rootfs/usr/share/powerstation/platform/*.toml", dest = "/usr/share/powerstation/platform/", mode = "644" },
]

[package.metadata.generate-rpm.requires]
dbus = "*"
pciutils = "*"

[dependencies]
log = "0.4.27"
simple_logger = "5.0.0"
tokio = { version = "1.45.1", features = ["full"] }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
zbus_macros = "5.7.1"
rog_platform = { git = "https://gitlab.com/asus-linux/asusctl.git", default-features = true }
xdg = "3.0.0"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
udev = { version = "0.9.3", features = ["send", "sync"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
libryzenadj = { git = "https://gitlab.com/shadowapex/libryzenadj-rs.git" }

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
